src/objects/Case_Information__c.object
<CustomObject>
    <description>To record all cases for a client.</description>
    <fields>
        <fullName>Abbreviated_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Abbreviated Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <inlineHelpText>Select the organization to which this  Defense Attorney or Law Guardian belongs or select  &quot;none&quot;.</inlineHelpText>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>18 B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn Defenders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Defenders of Harlem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York County Defenders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens Law Associates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Bronx Defenders</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arraignment_Status_CC__c</fullName>
        <description>Set to &quot;Arraigned&quot; by workflow &quot;CC Arraignment Status&quot;, otherwise defaults to Pending or set to Never Arraigned by user.</description>
        <inlineHelpText>If case is not brought to arraignment, set to &quot;Never Arraigned&quot;</inlineHelpText>
        <label>Arraignment Status CC</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Never Arraigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arraigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arrest_Date__c</fullName>
        <label>Arrest Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrest_Number__c</fullName>
        <label>Arrest #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Corporation_Counsel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistant Corporation Counsel</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Information (Assistant Corporation Counsel)</relationshipLabel>
        <relationshipName>Assistant_Corporation_Counsel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attorney_LawGuardian__c</fullName>
        <label>Attorney/Law Guardian</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_Phones__c</fullName>
        <label>Attorney Phone(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bail_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bail Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bail_Set_Bond__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Amount as 0-10,000,000 digits; no $ sign. For Detension status of &quot;made Bail&quot; and &quot;In On Bail&quot;</inlineHelpText>
        <label>Bail Set - Bond</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bail_Set_Cash__c</fullName>
        <inlineHelpText>Amount as 0 - 10,000,000 digits; no $ sign. For Detension status of &quot;Made Bail&quot; and &quot;In On Bail&quot;</inlineHelpText>
        <label>Bail Set - Cash</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borough__c</fullName>
        <label>Borough</label>
        <picklist>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manhattan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staten Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Arraignment_Outcome__c</fullName>
        <description>Originally for outcomes for Supervised Release Program; now for all Criminal Court arraignment outcomes</description>
        <label>CC Arraignment Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Case resolved/disposed at arraignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released to CASES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bail set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remanded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (includes other instances of conditional release)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Court_Status__c</fullName>
        <description>Calculate what the actual stage is based on possible data entry combinations.

Can&apos;t include Bail Set - Bond because it defaults to 0 (not blank)</description>
        <formula>IF (NOT(ISBLANK(Sentence__c)) || NOT(ISBLANK(Sentence_Disposition_Date__c)) || Youthful_Offender_Status__c = TRUE || Intensive_Supervision_Probation__c = TRUE, &quot;Final Disposition&quot;,
     IF (NOT(ISBLANK(Indictment__c)) || NOT(ISBLANK(Indictment_Date__c)) || NOT(ISBLANK(Top_Indictment_Charge__c)), &quot;Indicted&quot;,
          IF (NOT(ISBLANK(Criminal_Court_Arraignment_Date__c)) || NOT(ISBLANK(TEXT(Detention_Status_at_CC_Arraignment__c  ))) || NOT(ISBLANK(Top_Criminal_Court_Arraignment_Charge__c)) || NOT(ISBLANK(Bail_Set_Cash__c)) ||  RIGHT(TRIM(Name), 2) &lt;&gt; &quot;NA&quot; , &quot;Arraigned CC&quot;, 
              TEXT( Arraignment_Status_CC__c ))))</formula>
        <label>Case Court Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status_at_Exit__c</fullName>
        <label>Case Status at Exit</label>
        <picklist>
            <picklistValues>
                <fullName>Sentenced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convicted, Adjourned for Sentencing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposition Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-adjudication/Pending Disposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Type_Portal__c</fullName>
        <formula>CASE(
 $RecordType.Name  , 
&apos;Intake Case - Family Court&apos;, &apos;Intake Case - FC&apos;,
&apos;Intake Case - Supreme Court&apos;, &apos;Intake Case - SC&apos;,
&apos;Other Case - Criminal Court&apos;,&apos;Other Case - CC&apos;,
&apos;Other Case - Family Court&apos;,&apos;Other Case - FC&apos;,
&apos;Other Case - Supreme Court&apos;,&apos;Other Case - SC&apos;,
&apos;Prior Screened Case - Family Court&apos;,&apos;Prior Screened Case - FC&apos;,
&apos;Prior Screened Case - Supreme Court&apos;,&apos;Prior Screened Case - SC&apos;,&apos;NA&apos;
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type Portal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_List_Admin__c</fullName>
        <label>Charge List (Admin)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <label>Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Information</relationshipLabel>
        <relationshipName>Case_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <inlineHelpText>Enter text.</inlineHelpText>
        <label>Complaint</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Court_Part__c</fullName>
        <globalPicklist>Court_Parts</globalPicklist>
        <label>Court Part</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Court__c</fullName>
        <globalPicklist>Courts</globalPicklist>
        <label>Court</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Court_name__c</fullName>
        <inlineHelpText>Enter the client&apos;s name as it appears on the client&apos;s court documents</inlineHelpText>
        <label>Name as it appears on Court Documents</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criminal_Court_Arraignment_Date__c</fullName>
        <label>Criminal Court Arraignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Case_Status__c</fullName>
        <formula>if(  RecordType.Name = &apos;Family Court&apos;,
    if(not(isblank( Sentence_Disposition_Date__c )), &quot;After Disposition&quot;, 
    if(not(isblank( Plea_Finding_Date__c )), &quot;After Fact Finding&quot;, &quot;Before Fact Finding&quot;)), 

    if(not(isblank( Sentence_Disposition_Date__c )), &quot;After Sentence&quot;, 
    if(not(isblank( Plea_Finding_Date__c )), &quot;After Plea&quot;, &quot;Pre Plea&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_No_of_Days_DS__c</fullName>
        <label>DA No of Days DS</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_Offer_SRP__c</fullName>
        <description>DA offer at arraignment (SRP)</description>
        <label>DA Offer (SRP)</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Jail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>START</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_s_Plea_Offer_Max_Days__c</fullName>
        <formula>if( ispickval( DA_s_Plea_Offer__c, &quot;Determinate Sentence&quot;),  DA_s_Plea_Offer_Min_Days__c , 

value(trim(Mid( DA_s_Plea_Offer_Sentence__c, 
find(&quot;-&quot;, DA_s_Plea_Offer_Sentence__c)+1, Max(find(&quot;ear&quot;,Mid(DA_s_Plea_Offer_Sentence__c, find(&quot;-&quot;, DA_s_Plea_Offer_Sentence__c)+1,len(DA_s_Plea_Offer_Sentence__c) - find(&quot;-&quot;, DA_s_Plea_Offer_Sentence__c))), 
find( &quot;ay&quot;, Mid(DA_s_Plea_Offer_Sentence__c, find(&quot;-&quot;, DA_s_Plea_Offer_Sentence__c)+1,len(DA_s_Plea_Offer_Sentence__c) - find(&quot;-&quot;, DA_s_Plea_Offer_Sentence__c))), 
find(&quot;onth&quot;, Mid(DA_s_Plea_Offer_Sentence__c, find(&quot;-&quot;, DA_s_Plea_Offer_Sentence__c)+1,len(DA_s_Plea_Offer_Sentence__c) - find(&quot;-&quot;, DA_s_Plea_Offer_Sentence__c))))-3 ))) 

* 

if(contains(RIGHT(DA_s_Plea_Offer_Sentence__c, 7), &quot;ay&quot;), 1, 
if(contains(RIGHT(DA_s_Plea_Offer_Sentence__c, 7), &quot;on&quot;), 30, 
if(contains(RIGHT(DA_s_Plea_Offer_Sentence__c, 7), &quot;ea&quot;), 365,0 
))) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA&apos;s Plea Offer Max Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_s_Plea_Offer_Min_Days__c</fullName>
        <formula>value(LEFT(LEFT( DA_s_Plea_Offer_Sentence__c, if(contains(DA_s_Plea_Offer_Sentence__c, &quot;-&quot;), find(&quot;-&quot;, DA_s_Plea_Offer_Sentence__c), len(DA_s_Plea_Offer_Sentence__c)) 
), Max(find(&quot;ear&quot;,LEFT(DA_s_Plea_Offer_Sentence__c, 7)), find( &quot;ay&quot;, LEFT(DA_s_Plea_Offer_Sentence__c, 7)), find(&quot;onth&quot;, LEFT(DA_s_Plea_Offer_Sentence__c, 7)))-3 )) 

* 

if(contains(LEFT(DA_s_Plea_Offer_Sentence__c, 7), &quot;ay&quot;), 1, 
if(contains(LEFT(DA_s_Plea_Offer_Sentence__c, 7), &quot;on&quot;), 30, 
if(contains(LEFT(DA_s_Plea_Offer_Sentence__c, 7), &quot;ea&quot;), 365,0 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DA&apos;s Plea Offer Min Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DA_s_Plea_Offer_Sentence__c</fullName>
        <label>DA&apos;s Plea Offer Sentence</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DA_s_Plea_Offer__c</fullName>
        <label>DA&apos;s Plea Offer</label>
        <picklist>
            <picklistValues>
                <fullName>Conditional Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation/split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation and Time Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation (3 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation (5 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YO and Probation (5 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Year or Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Determinate Sentence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate Sentence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified Prison Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Jail Disposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>START</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateDiff_PleaDtTodayDt__c</fullName>
        <formula>IF(NOT(ISNULL( Plea_Finding_Date__c)), (Plea_Finding_Date__c - TODAY()), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDiff-PleaDtTodayDt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateDiff_SentDtTodayDt__c</fullName>
        <formula>IF(NOT(ISNULL(Sentence_Disposition_Date__c  )), (Sentence_Disposition_Date__c - TODAY()), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDiff-SentDtTodayDt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defense_Attorney_Law_Guardian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defense Attorney/ Law Guardian</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Attorney/ Law Guardian</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Information (Defense Attorney/ Law Guardian)</relationshipLabel>
        <relationshipName>Case_Information2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detention_Status_at_CC_Arraignment__c</fullName>
        <label>Detention Status at CC Arraignment</label>
        <picklist>
            <picklistValues>
                <fullName>ROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In On Bail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detention_Status_at_SC_Arraignment__c</fullName>
        <label>Detention Status at SC Arraignment</label>
        <picklist>
            <picklistValues>
                <fullName>ROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Made Bail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In On Bail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Dismissal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plead Guilty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial - Dismissed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial - Acquitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial - Convicted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial - Hung Jury/Retrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Court_Arraignment_Date__c</fullName>
        <label>Family Court Arraignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family_Court_Period__c</fullName>
        <defaultValue>9</defaultValue>
        <inlineHelpText>The usual time for an assignmemt to CEP from Famiy Court, entered as months. This time is added to the orientation date to determine the original projected exit date .</inlineHelpText>
        <label>Family Court Period</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Other_Plea_Offer__c</fullName>
        <inlineHelpText>Text required if Plea Offer is &quot;OTHER&quot;</inlineHelpText>
        <label>If Other Plea Offer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Successful_Other__c</fullName>
        <inlineHelpText>Text required here if selection on left is &quot;Sucessful - Other&quot;</inlineHelpText>
        <label>If Successful, Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Unsuccessful_Other__c</fullName>
        <inlineHelpText>Text required here if selection on left is &quot;Unsucessful - Other&quot;</inlineHelpText>
        <label>If Unsuccessful, Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_VOP_Original_Sentence_Date__c</fullName>
        <label>If VOP, Original Sentence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Includes_Felony_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Felony Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indictment_Date__c</fullName>
        <label>Indictment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Indictment__c</fullName>
        <inlineHelpText>Two format:s are permitted  
  12345-2006   and  
  SCI12345-YYYY   where YYYY is the year</inlineHelpText>
        <label>Indictment #</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intake_Date__c</fullName>
        <label>Intake Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intensive_Supervision_Probation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if &quot;Yes&quot; .</inlineHelpText>
        <label>Intensive Supervision Probation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interim_Supervision_by_Probation_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interim Supervision by Probation Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Judge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Judge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Judge</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Information (Judge)</relationshipLabel>
        <relationshipName>Case_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Judge_s_Promise_Sentence_Successful__c</fullName>
        <label>Judge&apos;s Promise Sentence (Successful)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Judge_s_Promise_Sentence_Unsuccessful__c</fullName>
        <label>Judge&apos;s Promise Sentence (Unsuccessful)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Judge_s_Promise_if_Successful_Max_Days__c</fullName>
        <formula>if( ispickval(Judge_s_Promise_if_Successful__c, &quot;Determinate Sentence&quot;), Judge_s_Promise_if_Successful_Min_Days__c, 

value(trim(Mid(Judge_s_Promise_Sentence_Successful__c, 
find(&quot;-&quot;, Judge_s_Promise_Sentence_Successful__c)+1, Max(find(&quot;ear&quot;,Mid(Judge_s_Promise_Sentence_Successful__c, find(&quot;-&quot;, Judge_s_Promise_Sentence_Successful__c)+1,len(Judge_s_Promise_Sentence_Successful__c) - find(&quot;-&quot;, Judge_s_Promise_Sentence_Successful__c))), 
find( &quot;ay&quot;, Mid(Judge_s_Promise_Sentence_Successful__c, find(&quot;-&quot;, Judge_s_Promise_Sentence_Successful__c)+1,len(Judge_s_Promise_Sentence_Successful__c) - find(&quot;-&quot;, Judge_s_Promise_Sentence_Successful__c))), 
find(&quot;onth&quot;, Mid(Judge_s_Promise_Sentence_Successful__c, find(&quot;-&quot;, Judge_s_Promise_Sentence_Successful__c)+1,len(Judge_s_Promise_Sentence_Successful__c) - find(&quot;-&quot;, Judge_s_Promise_Sentence_Successful__c))))-3 ))) 

* 

if(contains(RIGHT(Judge_s_Promise_Sentence_Successful__c, 7), &quot;ay&quot;), 1, 
if(contains(RIGHT(Judge_s_Promise_Sentence_Successful__c, 7), &quot;on&quot;), 30, 
if(contains(RIGHT(Judge_s_Promise_Sentence_Successful__c, 7), &quot;ea&quot;), 365,0 
))) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Judge&apos;s Promise if Successful Max Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Judge_s_Promise_if_Successful_Min_Days__c</fullName>
        <formula>value(LEFT(LEFT(Judge_s_Promise_Sentence_Successful__c, if(contains(Judge_s_Promise_Sentence_Successful__c, &quot;-&quot;), find(&quot;-&quot;, Judge_s_Promise_Sentence_Successful__c), len(Judge_s_Promise_Sentence_Successful__c)) 
), Max(find(&quot;ear&quot;,LEFT(Judge_s_Promise_Sentence_Successful__c, 7)), find( &quot;ay&quot;, LEFT(Judge_s_Promise_Sentence_Successful__c, 7)), find(&quot;onth&quot;, LEFT(Judge_s_Promise_Sentence_Successful__c, 7)))-3 )) 

* 

if(contains(LEFT(Judge_s_Promise_Sentence_Successful__c, 7), &quot;ay&quot;), 1, 
if(contains(LEFT(Judge_s_Promise_Sentence_Successful__c, 7), &quot;on&quot;), 30, 
if(contains(LEFT(Judge_s_Promise_Sentence_Successful__c, 7), &quot;ea&quot;), 365,0 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Judge&apos;s Promise if Successful Min Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Judge_s_Promise_if_Successful__c</fullName>
        <label>Judge’s Promise if Successful</label>
        <picklist>
            <picklistValues>
                <fullName>Conditional Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation and Time Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation (3 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation (5 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YO and Probation (5 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Promise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Judge_s_Promise_if_Unsuccessful_Max_Days__c</fullName>
        <formula>if( ispickval(Judge_s_Promise_if_Unsuccessful__c, &quot;Determinate Sentence&quot;),  Judge_s_Promise_if_Unsuccessful_Min_Days__c,

value(trim(Mid(Judge_s_Promise_Sentence_Unsuccessful__c, 
find(&quot;-&quot;, Judge_s_Promise_Sentence_Unsuccessful__c)+1, Max(find(&quot;ear&quot;,Mid(Judge_s_Promise_Sentence_Unsuccessful__c, find(&quot;-&quot;, Judge_s_Promise_Sentence_Unsuccessful__c)+1,len(Judge_s_Promise_Sentence_Unsuccessful__c) - find(&quot;-&quot;, Judge_s_Promise_Sentence_Unsuccessful__c))), 
find( &quot;ay&quot;, Mid(Judge_s_Promise_Sentence_Unsuccessful__c, find(&quot;-&quot;, Judge_s_Promise_Sentence_Unsuccessful__c)+1,len(Judge_s_Promise_Sentence_Unsuccessful__c) - find(&quot;-&quot;, Judge_s_Promise_Sentence_Unsuccessful__c))), 
find(&quot;onth&quot;, Mid(Judge_s_Promise_Sentence_Unsuccessful__c, find(&quot;-&quot;, Judge_s_Promise_Sentence_Unsuccessful__c)+1,len(Judge_s_Promise_Sentence_Unsuccessful__c) - find(&quot;-&quot;, Judge_s_Promise_Sentence_Unsuccessful__c))))-3 ))) 

* 

if(contains(RIGHT(Judge_s_Promise_Sentence_Unsuccessful__c, 7), &quot;ay&quot;), 1, 
if(contains(RIGHT(Judge_s_Promise_Sentence_Unsuccessful__c, 7), &quot;on&quot;), 30, 
if(contains(RIGHT(Judge_s_Promise_Sentence_Unsuccessful__c, 7), &quot;ea&quot;), 365,0 
)))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Judge&apos;s Promise if Unsuccessful Max Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Judge_s_Promise_if_Unsuccessful_Min_Days__c</fullName>
        <formula>value(LEFT(LEFT(Judge_s_Promise_Sentence_Unsuccessful__c, if(contains(Judge_s_Promise_Sentence_Unsuccessful__c, &quot;-&quot;), find(&quot;-&quot;, Judge_s_Promise_Sentence_Unsuccessful__c), len(Judge_s_Promise_Sentence_Unsuccessful__c))
), Max(find(&quot;ear&quot;,LEFT(Judge_s_Promise_Sentence_Unsuccessful__c, 7)), find( &quot;ay&quot;, LEFT(Judge_s_Promise_Sentence_Unsuccessful__c, 7)), find(&quot;onth&quot;, LEFT(Judge_s_Promise_Sentence_Unsuccessful__c, 7)))-3 ))

*

if(contains(LEFT(Judge_s_Promise_Sentence_Unsuccessful__c, 7), &quot;ay&quot;), 1,
if(contains(LEFT(Judge_s_Promise_Sentence_Unsuccessful__c, 7), &quot;on&quot;), 30,
if(contains(LEFT(Judge_s_Promise_Sentence_Unsuccessful__c, 7), &quot;ea&quot;), 365,0
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Judge&apos;s Promise if Unsuccessful Min Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Judge_s_Promise_if_Unsuccessful__c</fullName>
        <label>Judge&apos;s Promise if Unsuccessful</label>
        <picklist>
            <picklistValues>
                <fullName>Conditional Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation/split</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation and Time Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation (3 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probation (5 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YO and Probation (5 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Year or Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Determinate Sentence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indeterminate Sentence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unspecified Prison Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Promise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Master_Intake_Docket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Intake Docket</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Client_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Client_Account__c</valueField>
            </filterItems>
            <infoMessage>Use this field to select the primary intake case when there are multiple intake cases with a mandate, or a client is reinstated and a new case&apos;s mandate is added to the old, &quot;master&quot; docket.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Information__c</referenceTo>
        <relationshipLabel>Attached Dockets</relationshipLabel>
        <relationshipName>Attached_Docket</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Docket__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field if there is no Docket Number for this case. On save, DOCKET NA will be auto filled in the Docket Number field.</inlineHelpText>
        <label>No Docket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_of_Cases__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num of Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_Mandate__c</fullName>
        <inlineHelpText>Enter the mandate for the attached case. This value will be added to the client&apos;s current mandate on their contact page.</inlineHelpText>
        <label>Attached Case Mandate</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSI_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSI Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Case_Information1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>